fix flicker rate on tagline animation

--- a/src/style.css
+++ b/src/style.css
@@ -521,11 +521,8 @@ footer {
     -webkit-transform: rotate(1deg);
             transform: rotate(1deg);
   }
-  68% {
-    opacity: 0.8;
-  }
   69% {
-    opacity: 0.8;
+    opacity: 01.0;
     -webkit-transform: skew(-3deg) rotate(1deg);
             transform: skew(-3deg) rotate(1deg);
   }
@@ -576,11 +573,8 @@ footer {
     -webkit-transform: rotate(1deg);
             transform: rotate(1deg);
   }
-  68% {
-    opacity: 0.8;
-  }
   69% {
-    opacity: 0.8;
+    opacity: 01.0;
     -webkit-transform: skew(-3deg) rotate(1deg);
             transform: skew(-3deg) rotate(1deg);
   }
